feat(initial-repository): add user instruction and put the repository in its initial state Co-authored-by: Florian Gomas

--- a/README.adoc
+++ b/README.adoc
@@ -4,9 +4,21 @@ Big UP to https://github.com/bobocode-projects/java-fundamentals-exercises[boboc
 
 This is a missing part.
 
-== Sealed interface
+== Your challenge
 
-=== Declaring a sealed interface
+* Let `Color`, `Face`, `PlayingCard` and `TrumpCard` untouched: they're fine!
+* Let the test class untouched: it should work ... in the end
+* Now let's begin:
+** We need to differentiate some special suit cards : numbers and royals. Let's make the test compile !
+*** Constraint: Use sealed interface, records and compact constructors
+** Refactor `toString` method of the `PrettyPrinter`
+*** Constraint: Use only one time the `return` keyword. You should have 7 cases and no `default`. All the tests should work at this point.
+
+== Cheat sheet
+
+=== Sealed interface
+
+==== Declaring a sealed interface
 
 [source,java]
 ----
@@ -15,7 +27,7 @@ public sealed interface Foo permits Fighters, Bar {
 }
 ----
 
-=== Implementing a sealed interface
+==== Implementing a sealed interface
 
 Can be done with either a `final` class, a sealed
 
@@ -44,7 +56,7 @@ public non-sealed interface Bar extends Foo {
 
 
 
-== Declaring a record
+=== Declaring a record
 
 [source,java]
 ----
@@ -53,7 +65,7 @@ public record FooFighter(String name, Instrument instrument, String yearsActive)
 }
 ----
 
-=== Compact constructor
+==== Compact constructor
 
 [source,java]
 ----
@@ -69,9 +81,9 @@ public record FooFighter(String name, Instrument instrument, String yearsActive)
 }
 ----
 
-=== Beware of mutable properties
+==== Beware of mutable properties
 
-== Switch expression (opposed to Switch statement)
+=== Switch expression (opposed to Switch statement)
 
 [source,java]
 ----
@@ -88,9 +100,9 @@ return switch day {
 }
 ----
 
-== Pattern matching
+=== Pattern matching
 
-=== In a if
+==== In a if
 
 [source,java]
 ----
@@ -100,7 +112,7 @@ if (value instanceof Person person) {
 ----
 
 
-=== in a switch
+==== in a switch
 
 [source,java]
 ----
@@ -129,6 +141,5 @@ return switch (value) {
     case Fighter fighter when fighter.name().startsWith("Dave") -> "Grohl !!!!!";
 }
 ----
-
 
 
